src/objects/Week__c.object
<CustomObject>
    <fields>
        <fullName>Week_Ends_On__c</fullName>
        <label>Week Ends On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_Number__c</fullName>
        <label>Week Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Starts_On__c</fullName>
        <label>Week Starts On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Week</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Week_Starts_On__c</columns>
        <columns>Week_Ends_On__c</columns>
        <columns>Week_Number__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Week Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weeks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>